Fixed page scroll on firefox

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -9,7 +9,8 @@
   width: 100%;
   height: 100%;
   background-attachment: scroll;
-  overflow-y: overlay;
+  overflow-y: auto; 
+  overflow-x: hidden;
 }
 
 .screen-appear {
